[package]
name = "zen_alloc"
version = "0.1.0"
edition = "2021"
authors = ["github.com/MatthewMcDade13"]
description = "Small Custom Arena Allocators in Rust"
readme = "README.md"
repository = "https://github.com/MatthewMcDade13/zen_alloc"
license-file = "LICENSE"
keywords = ["allocators", "memory", "alloc", "dealloc"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
